# Bolivariano-RAG

./: .cruft.json  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
